feat(assets): Centralize asset management with build-time sync
Phase 4G: Logo Strategy for Multi-Extension Monorepo — Complete

Problem:
- Icons duplicated across extension packages
- No single source of truth for shared assets
- Risk of inconsistency when adding future extensions

Solution:
- Centralized `/assets/` directory for all shared assets
- Build-time sync script with checksum validation
- Gitignored copied assets (build artifacts, not source)
- Single source of truth, no duplication in git

Implementation:

Created:
- assets/icon.png (moved from root)
- assets/icon_large.png (moved from root)
- scripts/sync-assets.sh (with checksum validation)
- docs/ASSET-MANAGEMENT.md (concise docs)
- packages/rangelink-vscode-extension/.gitignore

Modified:
- README.md: Updated icon path to ./assets/icon.png
- packages/rangelink-vscode-extension/package.json:
  - Added pre-package hook to run sync-assets.sh
- docs/ROADMAP.md: Marked Phase 4G complete

Deleted:
- packages/rangelink-vscode-extension/icon.png (now copied at build time)

Build Process:
1. Run `pnpm package` in extension directory
2. sync-assets.sh copies /assets/icon.png → package directory
3. Validates checksum matches source (fails if mismatch)
4. vsce package includes copied icon
5. Icon gitignored (regenerated on each build)

Benefits:
- Single source of truth for all shared assets
- No duplication in git history
- Checksum validation ensures consistency
- Easy to add future extensions (Neovim, Sublime, etc.)
- Build fails fast if assets missing or corrupted

Status: Phase 4G complete ✅
Next: Phase 4H - Logo Origins (Nerdy Humor Section)

--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,9 @@ packages/*/dist/
 # Generated version files
 packages/*/src/version.json
 
+# Build-time assets (copied from /assets/ during package builds)
+packages/*/icon.png
+packages/*/icon_large.png
+
 .commits/
 
