--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-n": "^17.10.0",
     "eslint-plugin-unicorn": "^55.0.0",
     "prettier": "^3.1.1",
+    "prettier-plugin-packagejson": "^2.5.0",
     "typescript": "^5.3.3"
   },
   "engines": {
