Ran `pnpm format:fix` before going with the next release

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,7 @@
       "name": "Run RangeLink VSCode Extension",
       "type": "extensionHost",
       "request": "launch",
-      "args": [
-        "--extensionDevelopmentPath=${workspaceFolder}/packages/rangelink-vscode-extension"
-      ],
+      "args": ["--extensionDevelopmentPath=${workspaceFolder}/packages/rangelink-vscode-extension"],
       "outFiles": [
         "${workspaceFolder}/packages/rangelink-vscode-extension/out/**/*.js",
         "${workspaceFolder}/packages/rangelink-core-ts/out/**/*.js"
