feat: Add terminal binding for AI-assisted development workflow
Implement terminal binding feature that automatically sends generated RangeLinks
to the integrated terminal within VSCode/Cursor, eliminating copy-paste friction
for claude-code and other AI assistants.

## New Features

**Terminal Binding Commands:**
- `Bind to Terminal` - Bind to currently active integrated terminal
- `Unbind Terminal` - Unbind from terminal
- Auto-unbind when bound terminal closes
- Links automatically sent to bound terminal on generation

**AI Workflow Integration:**
- Zero-friction context sharing with claude-code
- Persistent binding (session-scoped until terminal closes)
- Works with integrated terminal only (VSCode/Cursor)
- Competes with Cursor's built-in AI by making external AI feel integrated

## Implementation

**New Files:**

`src/TerminalBindingManager.ts` (135 lines)
- Manages terminal binding state and lifecycle
- Handles bind/unbind operations with validation
- Listens for terminal close events (auto-unbind)
- Sends text to bound terminal via `sendText()`
- Comprehensive logging with getLogger()

`src/RangeLinkService.ts` (157 lines)
- Extracted from extension.ts for better separation of concerns
- Constructor injection pattern with readonly dependencies
- Integrates with TerminalBindingManager
- Auto-sends links to bound terminal when available

`src/utils/toInputSelection.ts` (70 lines)
- Extracted adapter function (arrow function style)
- Converts VSCode Selections to core InputSelection interface
- Detects coverage (FullLine vs PartialLine) for each selection

**Modified Files:**

`extension.ts` (reduced from ~475 lines to ~343 lines)
- Removed 132 lines (extracted RangeLinkService + toInputSelection)
- Added terminal binding command registration
- Constructor injection for RangeLinkService dependencies
- Re-exports for backward compatibility with tests

`package.json`
- Added `bindToTerminal` command
- Added `unbindTerminal` command
- Added `showVersion` command (

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -78,6 +78,18 @@
         "title": "Show Version Info",
         "category": "RangeLink",
         "icon": "$(info)"
+      },
+      {
+        "command": "rangelink.bindToTerminal",
+        "title": "Bind to Terminal",
+        "category": "RangeLink",
+        "icon": "$(link)"
+      },
+      {
+        "command": "rangelink.unbindTerminal",
+        "title": "Unbind Terminal",
+        "category": "RangeLink",
+        "icon": "$(close)"
       }
     ],
     "configuration": {
