Tweak the the vscode extension publish flow and docs
There's still a lot of copy-pasta across those documents; it will require further tweaking

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "package:vscode-extension": "pnpm --filter rangelink-vscode-extension package",
-    "publish:vscode-extension": "pnpm --filter rangelink-vscode-extension publish",
+    "publish:vscode-extension:vsix": "pnpm --filter rangelink-vscode-extension publish:vsix",
     "test": "pnpm -r test",
     "watch": "pnpm -r --parallel watch"
   },
