fix(vscode-ext): separate dist/ and out/ directories to follow VSCode conventions
This fixes a problem with version `0.2.0`

Prevents "Cannot find module" errors by separating development and production builds:
- esbuild bundles to dist/ (production, packaged in .vsix)
- tsc compiles to out/ (development, F5 debugging only)

Following official VSCode extension conventions eliminates the root cause where tsc could overwrite esbuild's bundle with unbundled files, causing runtime errors.

Simplifies build process by removing validation scripts (-270 lines).

Benefits:
- Impossible for tsc --watch to interfere with production packaging
- Self-documenting (dist = distribution, out = output)
- Standard convention matching VSCode templates
- Comprehensive docs in DEVELOPMENT.md explain rationale

--- a/packages/rangelink-vscode-extension/.vscodeignore
+++ b/packages/rangelink-vscode-extension/.vscodeignore
@@ -13,10 +13,9 @@ tsconfig.json
 # Test files - exclude compiled tests
 **/*.test.js
 **/test/**
-out/index.js
-out/index.d.ts
 
-# Development files
+# Development files - exclude tsc output (use dist/ for production)
+out/**
 .vscode/**
 .vscode-test/**
 node_modules/**
@@ -34,5 +33,4 @@ scripts/**
 # - README.md
 # - LICENSE
 # - icon.png
-# - out/extension.js (main entry)
-# - out/VSCodeLogger.js (runtime dependency)
+# - dist/extension.js (bundled main entry)
