--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -28,10 +28,10 @@
   },
   "license": "MIT",
   "publisher": "couimet",
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "scripts": {
-    "clean": "rm -rf out coverage *.tsbuildinfo *.vsix",
-    "compile": "node scripts/generate-version.js && node esbuild.config.js && cp src/version.json out/version.json",
+    "clean": "rm -rf out dist coverage *.tsbuildinfo *.vsix",
+    "compile": "node scripts/generate-version.js && node esbuild.config.js && cp src/version.json dist/version.json && mkdir -p out && cp src/version.json out/version.json",
     "install-local": "./scripts/install-local.sh",
     "install-local:cursor": "./scripts/install-local.sh cursor",
     "install-local:vscode": "./scripts/install-local.sh vscode",
