Adjust rest of the code to the new `barebone-logger` reality

--- a/packages/rangelink-core-ts/package.json
+++ b/packages/rangelink-core-ts/package.json
@@ -29,6 +29,9 @@
     "test": "jest --coverage",
     "watch": "tsc -p . --watch"
   },
+  "dependencies": {
+    "barebone-logger": "workspace:*"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^18.0.0",
