--- a/packages/rangelink-core-ts/tsconfig.json
+++ b/packages/rangelink-core-ts/tsconfig.json
@@ -4,8 +4,12 @@
     "rootDir": "./src",
     "outDir": "./out",
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "composite": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "out", "src/**/*.test.ts"]
+  "exclude": ["node_modules", "out", "src/**/*.test.ts"],
+  "references": [
+    { "path": "../barebone-logger" }
+  ]
 }
