--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -177,6 +177,7 @@
     "onStartupFinished"
   ],
   "dependencies": {
+    "barebone-logger": "workspace:*",
     "rangelink-core-ts": "workspace:*"
   },
   "devDependencies": {
