--- a/packages/rangelink-core-ts/package.json
+++ b/packages/rangelink-core-ts/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^18.0.0",
+    "barebone-logger-testing": "workspace:*",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.3.3"
