--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -185,6 +185,7 @@
     "@types/node": "^20.0.0",
     "@types/vscode": "^1.49.0",
     "@vscode/vsce": "^3.6.2",
+    "barebone-logger-testing": "workspace:*",
     "esbuild": "^0.25.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.0",
