refactor(monorepo): delegate clean:all to packages and prevent tsbuildinfo corruption
Replaces monorepo-wide find commands with package-level cleanup scripts for better
control and maintainability. Each package now explicitly manages its own artifacts,
preventing issues from stale TypeScript incremental build state.

Root cause: TypeScript's composite mode creates .tsbuildinfo files that can become
corrupted during interrupted builds or watch mode. When bypassing the root clean
step (e.g., running package-specific compiles), corrupted .tsbuildinfo caused
TypeScript to skip emitting files, breaking builds with "Cannot resolve module" errors.

Changes:
- Root clean:all now delegates to packages via `pnpm -r clean:all`
- Each package's clean:all delegates to clean first, then removes additional artifacts
- All packages explicitly clean *.tsbuildinfo in clean script
- Added coverage/ to barebone-logger-testing clean script for consistency

Benefits:
- Packages control their own cleanup logic (explicit, self-documenting)
- Prevents .tsbuildinfo corruption by always cleaning before builds
- DRY principle: clean:all reuses clean, avoiding duplication
- Aggressive clean:all removes caches and node_modules when needed
- Eliminates fragile find commands that depend on directory structure
- Each package script is readable and maintainable without shell expertise

Package patterns:
- clean: Build artifacts only (out/, dist/, coverage/, *.tsbuildinfo, *.vsix)
- clean:all: Delegates to clean, then adds (node_modules, .eslintcache, *.log, .vscode-test)

--- a/packages/barebone-logger/package.json
+++ b/packages/barebone-logger/package.json
@@ -27,6 +27,7 @@
   "types": "./out/index.d.ts",
   "scripts": {
     "clean": "rm -rf out coverage *.tsbuildinfo",
+    "clean:all": "pnpm clean && rm -rf node_modules .eslintcache *.log",
     "compile": "tsc -p .",
     "test": "jest --coverage",
     "watch": "tsc -p . --watch"
