--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -31,6 +31,7 @@
   "main": "./dist/extension.js",
   "scripts": {
     "clean": "rm -rf out dist coverage *.tsbuildinfo *.vsix",
+    "clean:all": "pnpm clean && rm -rf node_modules .eslintcache *.log .vscode-test",
     "compile": "node scripts/generate-version.js && node esbuild.config.js && cp src/version.json dist/version.json && mkdir -p out && cp src/version.json out/version.json",
     "generate:publish-instructions": "./scripts/generate-publishing-instructions.sh",
     "install-local": "./scripts/install-local.sh",
