fix(monorepo): resolve TypeScript build cache corruption and race conditions
Fixes intermittent `pnpm compile` failures where esbuild couldn't resolve workspace dependencies. Root cause was two-fold: stale `.tsbuildinfo` files causing incremental compilation issues, and parallel builds creating race conditions.

Problem:
- TypeScript incremental compilation got confused when `.tsbuildinfo` existed but outputs were deleted
- Parallel package builds caused esbuild to start bundling before TypeScript finished writing files
- Result: "Could not resolve 'rangelink-core-ts'" errors despite successful compilation

Solution:
- Delete `.tsbuildinfo` files AFTER clean but BEFORE compile to ensure clean state
- Force sequential builds with `--workspace-concurrency=1` to eliminate race conditions
- Root compile script now: `pnpm clean && find . -name '*.tsbuildinfo' -delete && pnpm -r --workspace-concurrency=1 compile`

Benefits:
- Reliable builds every time (no more intermittent failures)
- Clear build order prevents timing-related bugs
- Individual package scripts unchanged (only root orchestration modified)

Technical details:
- TypeScript's incremental compilation uses `.tsbuildinfo` to track what needs recompilation
- When these files are stale, TypeScript may skip emitting `.js` files but emit `.d.ts.map` files
- pnpm's parallel execution respects dependencies but doesn't guarantee file I/O completion
- Sequential builds (`--workspace-concurrency=1`) ensure each package fully completes before next starts

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "clean": "pnpm -r clean",
     "clean:all": "pnpm -r clean:all",
-    "compile": "pnpm clean && pnpm -r compile",
+    "compile": "pnpm clean && find . -name '*.tsbuildinfo' -delete && pnpm -r --workspace-concurrency=1 compile",
     "enable-pnpm": "corepack enable",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
