Enable minimalist integration with Cursor AIfeat(vscode-ext): add Cursor AI chat destination integration
**Key Challenge:** Cursor doesn't expose chat API to extensions (as of November 2025).
No command exists to programmatically send text to chat (`workbench.action.chat.open`
not available, `aichat.newchataction` can't accept text parameters).

**Workaround implemented:**
- Copy RangeLink to clipboard
- Open chat panel via `aichat.newchataction` (with fallback to `toggleAuxiliaryBar`)
- Notify user to paste with Cmd/Ctrl+V via a toast msg like this: "RangeLink copied to clipboard. Paste (Cmd/Ctrl+V) in Cursor chat to use."

**IDE Detection:** Multi-layered approach (appName → extensions → uriScheme)

**Architecture:**
- `CursorAIDestination`: Handles Cursor-specific clipboard workflow
- `ChatDestinationManager`: Manages chat destination bindings (temporary solution)
- Commands: `rangelink.bindToCursorAI`, `rangelink.unbindDestination`
- Coexists with existing `TerminalBindingManager`

Benefits:
- First working Cursor AI integration despite API limitations
- Graceful fallback (clipboard + notification) maintains UX
- Full test coverage (11 test cases for CursorAIDestination)
- Extensible pattern for future chat destinations (GitHub Copilot, Claude Code)

This new work temporarily adds `ChatDestinationManager` _in parallel to_ `TerminalBindingManager`; this is a temporary transition until `TerminalBIndingMangager` gets migrated into a DestinationManager.
The code is not perfect, but it's a transition phase.

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -92,6 +92,18 @@
         "title": "Unbind Terminal",
         "category": "RangeLink",
         "icon": "$(close)"
+      },
+      {
+        "command": "rangelink.bindToCursorAI",
+        "title": "Bind to Cursor AI",
+        "category": "RangeLink",
+        "icon": "$(link)"
+      },
+      {
+        "command": "rangelink.unbindDestination",
+        "title": "Unbind Destination",
+        "category": "RangeLink",
+        "icon": "$(close)"
       }
     ],
     "configuration": {
