--- a/packages/barebone-logger/package.json
+++ b/packages/barebone-logger/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "clean": "rm -rf out coverage *.tsbuildinfo",
     "clean:all": "pnpm clean && rm -rf node_modules .eslintcache *.log",
-    "compile": "tsc -p .",
+    "compile": "tsc --build",
     "test": "jest --coverage",
     "watch": "tsc -p . --watch"
   },
