refactor(vscode-ext): unify destination managers (Phase 3)
Replaces TerminalBindingManager + ChatDestinationManager with unified PasteDestinationManager.
Eliminates duplication in RangeLinkService.copyAndNotify() (44 lines → 26 lines, ~40% reduction).

**Problem:** Two parallel managers with duplicated bind/unbind/send logic created maintenance burden.
RangeLinkService had identical code paths for terminal vs chat destinations.

**Solution:** Single PasteDestinationManager handles all destination types (terminal, Cursor AI, future destinations).

**Architecture:**
- Terminal binding: Requires active terminal reference, special closure handling
- Chat destinations: Uses isAvailable() check (e.g., Cursor IDE detection)
- Terminal-only auto-unbind on close (different semantics from chat)
- Generic bind(type)/unbind()/sendToDestination() API

**Breaking changes:**
- Removed `rangelink.unbindTerminal` command (use `rangelink.unbindDestination`)
- Command titles updated for clarity ("Bind RangeLink to X Destination")

**Implementation:**
- New: PasteDestinationManager with comprehensive tests (full coverage)
- Deleted: TerminalBindingManager, ChatDestinationManager, obsolete tests
- Updated: RangeLinkService simplified to single destination check
- Updated: extension.ts uses unified manager, always registers bindToCursorAI (fails gracefully)

Benefits:
- Single source of truth for destination management
- Easier to add new destinations (no new managers needed)
- Cleaner architecture, less code to maintain
- All tests passing, coverage maintained at 78.78%

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -84,25 +84,19 @@
       },
       {
         "command": "rangelink.bindToTerminal",
-        "title": "Bind to Terminal",
+        "title": "Bind RangeLink to Terminal Destination",
         "category": "RangeLink",
         "icon": "$(link)"
       },
       {
-        "command": "rangelink.unbindTerminal",
-        "title": "Unbind Terminal",
-        "category": "RangeLink",
-        "icon": "$(close)"
-      },
-      {
         "command": "rangelink.bindToCursorAI",
-        "title": "Bind to Cursor AI",
+        "title": "Bind RangeLink to Cursor AI Destination",
         "category": "RangeLink",
         "icon": "$(link)"
       },
       {
         "command": "rangelink.unbindDestination",
-        "title": "Unbind Destination",
+        "title": "Unbind RangeLink Destination",
         "category": "RangeLink",
         "icon": "$(close)"
       }
