feat(vscode-ext): implement text editor paste destination
Enables pasting RangeLinks at cursor position in active text editor files.

**Implementation:**
- Created TextEditorDestination class with smart padding and editor tracking
- Added binary file filtering (blocks .png, .pdf, .zip, etc.)
- Integrated with PasteDestinationManager for binding/unbinding
- Auto-unbinds on document close with user notification
- Registered `rangelink.bindToTextEditor` command

**User experience:**
- Status messages show workspace-relative paths (e.g., "src/file.ts")
- Auto-unbind notification when bound editor closes
- Smart padding ensures proper spacing around pasted links
- Prevents binding to binary files or non-file schemes

**Testing:**
- Tests focus on TextEditorDestination contract, not implementation details
- Delegates to utility unit tests (applySmartPadding, isEligibleForPaste)
- Follows PR #4 pattern: mock delegated utilities to avoid testing internals

**Benefits:**
- Third paste destination after terminal and Cursor AI
- Consistent behavior with existing destinations
- Proper separation between contract and implementation testing

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -89,6 +89,12 @@
         "icon": "$(link)"
       },
       {
+        "command": "rangelink.bindToTextEditor",
+        "title": "Bind RangeLink to Text Editor Destination",
+        "category": "RangeLink",
+        "icon": "$(link)"
+      },
+      {
         "command": "rangelink.bindToCursorAI",
         "title": "Bind RangeLink to Cursor AI Destination",
         "category": "RangeLink",
