--- a/packages/rangelink-core-ts/tsconfig.json
+++ b/packages/rangelink-core-ts/tsconfig.json
@@ -9,7 +9,5 @@
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "out", "src/**/*.test.ts"],
-  "references": [
-    { "path": "../barebone-logger" }
-  ]
+  "references": [{ "path": "../barebone-logger" }]
 }
