add allow-failure options to check-formatting action
Enables progressive fixing of quality issues without blocking CI, providing visibility
while maintaining green builds during cleanup.

New inputs (complement existing skip-* options):
- allow-format-failure: Shows format issues as warnings, doesn't fail CI
- allow-lint-failure: Shows lint issues as warnings, doesn't fail CI
- allow-types-failure: Shows type issues as warnings, doesn't fail CI

Benefits:
- Issues remain visible in CI logs and GitHub annotations
- Teams can tackle technical debt incrementally without blocking PRs
- Clear ::warning annotations distinguish intentional vs accidental failures
- Easy to remove flags once issues are resolved

Current usage: allow-lint-failure enabled for 373 existing ESLint errors.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
 
       - name: Check formatting and linting
         uses: ./.github/actions/check-formatting
+        with:
+          # Temporarily allow lint failures while progressively fixing issues
+          allow-lint-failure: 'true'
 
       - name: Run tests with coverage
         uses: ./.github/actions/run-tests
