--- a/.github/actions/check-formatting/action.yml
+++ b/.github/actions/check-formatting/action.yml
@@ -14,6 +14,18 @@ inputs:
     description: 'Skip type checking'
     required: false
     default: 'false'
+  allow-format-failure:
+    description: 'Allow format check to fail without blocking CI'
+    required: false
+    default: 'false'
+  allow-lint-failure:
+    description: 'Allow linting to fail without blocking CI'
+    required: false
+    default: 'false'
+  allow-types-failure:
+    description: 'Allow type checking to fail without blocking CI'
+    required: false
+    default: 'false'
 
 runs:
   using: 'composite'
@@ -23,18 +35,36 @@ runs:
       shell: bash
       run: |
         echo "Running format check..."
-        pnpm format
+        if ! pnpm format; then
+          if [ "${{ inputs.allow-format-failure }}" = "true" ]; then
+            echo "::warning::Format check found issues (allowed to fail)"
+          else
+            exit 1
+          fi
+        fi
 
     - name: Run ESLint
       if: inputs.skip-lint != 'true'
       shell: bash
       run: |
         echo "Running linter..."
-        pnpm lint
+        if ! pnpm lint; then
+          if [ "${{ inputs.allow-lint-failure }}" = "true" ]; then
+            echo "::warning::Linting found issues (allowed to fail)"
+          else
+            exit 1
+          fi
+        fi
 
     - name: Type check with TypeScript
       if: inputs.skip-types != 'true'
       shell: bash
       run: |
         echo "Running type check..."
-        pnpm compile
+        if ! pnpm compile; then
+          if [ "${{ inputs.allow-types-failure }}" = "true" ]; then
+            echo "::warning::Type checking found issues (allowed to fail)"
+          else
+            exit 1
+          fi
+        fi
