Add new command palette action to define `Claude Code Extension` as the destination: https://marketplace.visualstudio.com/items?itemName=anthropic.claude-code

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -103,6 +103,12 @@
         "icon": "$(link)"
       },
       {
+        "command": "rangelink.bindToClaudeCode",
+        "title": "Bind RangeLink to Claude Code Destination",
+        "category": "RangeLink",
+        "icon": "$(link)"
+      },
+      {
         "command": "rangelink.unbindDestination",
         "title": "Unbind RangeLink Destination",
         "category": "RangeLink",
