--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -97,6 +97,12 @@
         "icon": "$(link)"
       },
       {
+        "command": "rangelink.bindToCursorAI",
+        "title": "Bind RangeLink to Cursor AI Destination",
+        "category": "RangeLink",
+        "icon": "$(link)"
+      },
+      {
         "command": "rangelink.bindToClaudeCode",
         "title": "Bind RangeLink to Claude Code Destination",
         "category": "RangeLink",
