--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -79,6 +79,13 @@
         "enablement": "editorHasSelection"
       },
       {
+        "command": "rangelink.pasteSelectedTextToDestination",
+        "title": "Paste Selected Text to Bound Destination",
+        "category": "RangeLink",
+        "icon": "$(symbol-snippet)",
+        "enablement": "editorHasSelection"
+      },
+      {
         "command": "rangelink.showVersion",
         "title": "Show Version Info",
         "category": "RangeLink",
@@ -168,6 +175,12 @@
         "key": "ctrl+r ctrl+shift+p",
         "mac": "cmd+r cmd+shift+p",
         "when": "editorHasSelection"
+      },
+      {
+        "command": "rangelink.pasteSelectedTextToDestination",
+        "key": "ctrl+r ctrl+v",
+        "mac": "cmd+r cmd+v",
+        "when": "editorHasSelection"
       }
     ],
     "menus": {
@@ -191,6 +204,11 @@
           "when": "editorHasSelection",
           "command": "rangelink.copyPortableLinkToSelectionWithAbsolutePath",
           "group": "8_rangelink@4"
+        },
+        {
+          "when": "editorHasSelection",
+          "command": "rangelink.pasteSelectedTextToDestination",
+          "group": "8_rangelink@5"
         }
       ]
     }
