feat(vscode-ext): add Jump to Bound Destination command to package.json
Adds the "Jump to Bound Destination" command to package.json, making it discoverable
in the Command Palette and assigning keyboard shortcuts. This completes the UX layer
for issue #99.

Changes to package.json:

**Command Registration (contributes.commands):**
- Command: `rangelink.jumpToBoundDestination`
- Title: "Jump to Bound Destination"
- Category: "RangeLink"
- Icon: `$(target)` (VSCode codicon for navigation/focus)

**Keyboard Shortcuts (contributes.keybindings):**
- Windows/Linux: `Ctrl+R Ctrl+J`
- macOS: `Cmd+R Cmd+J`
- No "when" clause: Always available (command handles "no destination bound" case)

Rationale for Keybinding Choice:
- Consistent with RangeLink's "Ctrl/Cmd+R" prefix pattern (all commands use this namespace)
- J mnemonic: "Jump"
- Two-chord sequence follows existing command patterns (Ctrl+R Ctrl+L, Ctrl+R Ctrl+V, etc.)

User Experience:
- Command appears in Command Palette: "RangeLink: Jump to Bound Destination"
- Quick access via keyboard shortcut
- If no destination bound: Shows info message (handled by manager)
- If destination bound: Focuses the destination immediately

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -120,6 +120,12 @@
         "title": "Unbind RangeLink Destination",
         "category": "RangeLink",
         "icon": "$(close)"
+      },
+      {
+        "command": "rangelink.jumpToBoundDestination",
+        "title": "Jump to Bound Destination",
+        "category": "RangeLink",
+        "icon": "$(target)"
       }
     ],
     "configuration": {
@@ -181,6 +187,11 @@
         "key": "ctrl+r ctrl+v",
         "mac": "cmd+r cmd+v",
         "when": "editorHasSelection"
+      },
+      {
+        "command": "rangelink.jumpToBoundDestination",
+        "key": "ctrl+r ctrl+j",
+        "mac": "cmd+r cmd+j"
       }
     ],
     "menus": {
