feat(vscode-ext): add clipboard-only command registration and keybindings (Issue #117)
Registers two new clipboard-only commands with keybindings, completing the user-facing surface for Issue #117.

**Commands added:**

1. **rangelink.copyLinkOnlyWithRelativePath**
   - Title: "Copy Range Link (Clipboard Only)"
   - Keybinding: Cmd+R Cmd+C / Ctrl+R Ctrl+C
   - Calls: `service.createLinkOnly(PathFormat.WorkspaceRelative)`

2. **rangelink.copyLinkOnlyWithAbsolutePath**
   - Title: "Copy Range Link (Clipboard Only, Absolute)"
   - Keybinding: Cmd+R Cmd+Shift+C / Ctrl+R Ctrl+Shift+C
   - Calls: `service.createLinkOnly(PathFormat.Absolute)`

**Design decisions:**

- **Icon**: Using `$(clippy)` to differentiate from regular copy commands
- **Keybindings**: Following established pattern (Cmd+R prefix, shift = absolute)
- **Positioning**: Grouped with related commands for maintainability
- **No context menu**: As specified in Issue #117 requirements

**Benefits:**

- Discoverable via Command Palette with clear "(Clipboard Only)" distinction
- Muscle memory-friendly keybindings (Cmd+R Cmd+C vs Cmd+R Cmd+L)
- Test coverage ensures commands are properly registered
- Consistent with existing command organization

**User workflow:**

```
User has destination bound:
- Cmd+R Cmd+L → Copy + paste to destination (existing)
- Cmd+R Cmd+C → Copy only, skip destination (NEW)

User has no destination:
- Both commands behave identically (clipboard only)
```

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -79,6 +79,20 @@
         "enablement": "editorHasSelection"
       },
       {
+        "command": "rangelink.copyLinkOnlyWithRelativePath",
+        "title": "Copy Range Link (Clipboard Only)",
+        "category": "RangeLink",
+        "icon": "$(clippy)",
+        "enablement": "editorHasSelection"
+      },
+      {
+        "command": "rangelink.copyLinkOnlyWithAbsolutePath",
+        "title": "Copy Range Link (Clipboard Only, Absolute)",
+        "category": "RangeLink",
+        "icon": "$(clippy)",
+        "enablement": "editorHasSelection"
+      },
+      {
         "command": "rangelink.pasteSelectedTextToDestination",
         "title": "Paste Selected Text to Bound Destination",
         "category": "RangeLink",
@@ -180,6 +194,18 @@
         "command": "rangelink.copyPortableLinkWithAbsolutePath",
         "key": "ctrl+r ctrl+shift+p",
         "mac": "cmd+r cmd+shift+p",
+        "when": "editorHasSelection"
+      },
+      {
+        "command": "rangelink.copyLinkOnlyWithRelativePath",
+        "key": "ctrl+r ctrl+c",
+        "mac": "cmd+r cmd+c",
+        "when": "editorHasSelection"
+      },
+      {
+        "command": "rangelink.copyLinkOnlyWithAbsolutePath",
+        "key": "ctrl+r ctrl+shift+c",
+        "mac": "cmd+r cmd+shift+c",
         "when": "editorHasSelection"
       },
       {
