Register new command in the JSON file

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -146,6 +146,12 @@
         "title": "Jump to Bound Destination",
         "category": "RangeLink",
         "icon": "$(target)"
+      },
+      {
+        "command": "rangelink.openStatusBarMenu",
+        "title": "Open RangeLink Status Bar Menu",
+        "category": "RangeLink",
+        "icon": "$(link)"
       }
     ],
     "configuration": {
