refactor(docs): restructure CLAUDE.md with XML-structured format
Claude Code follows instructions more reliably when rules are tagged with semantic
XML-like elements. This restructure transforms the 745-line prose-based file into
a 564-line structured format with explicit rule IDs, priorities, and examples.

Key changes:
- 15 critical rules with IDs (Q001-P003) for easy reference
- New `.scratchpads/` workflow for working documents (PR drafts, plans, analysis)
- Consistent `NNNN-description.txt` naming across all 3 dot-folders
- Added `.scratchpads/` to .gitignore (matches .claude-questions/, .commit-msgs/)
- Curated GitHub labels list in G002 (avoid default labels)
- ROADMAP.md/JOURNEY.md marked legacy (GitHub issues are primary)
- Updated project description to match README tagline

Benefits:
- 24% reduction in file size (745 → 564 lines)
- Rules are explicit, tagged, and referenceable by ID
- Clear decision tree for file placement
- Reduced duplication (labels defined once in G002)

--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,10 @@ packages/*/src/version.json
 packages/*/icon.png
 packages/*/icon_large.png
 
-# Commit message drafts (managed by Claude Code)
-.commit-msgs/
-
 # Claude config
 .claude/settings.local.json
+
+# Folders where Claude Code is told to create and manage working documents
 .claude-questions/
+.commit-msgs/
+.scratchpads/
