--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -267,6 +267,7 @@
   ],
   "dependencies": {
     "barebone-logger": "workspace:*",
+    "nanoid": "^5.1.6",
     "rangelink-core-ts": "workspace:*"
   },
   "devDependencies": {
