[issues/177] add smart padding settings to package.json
Adds two new VSCode settings for controlling smart padding behavior:

- `rangelink.smartPadding.pasteLink` (default: 'both')
  Controls padding when pasting generated RangeLinks

- `rangelink.smartPadding.pasteContent` (default: 'none')
  Controls padding when using R-V (Paste Selected Text to Destination)

Both settings support four modes: 'both', 'before', 'after', 'none'.

This is Step 1 of issue #177 - schema only, no runtime behavior yet.

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -180,6 +180,30 @@
           "default": "-",
           "description": "Delimiter used between start and end positions (e.g., - in #L10-L20)",
           "pattern": "^[^0-9]+$"
+        },
+        "rangelink.smartPadding.pasteLink": {
+          "type": "string",
+          "enum": ["both", "before", "after", "none"],
+          "default": "both",
+          "enumDescriptions": [
+            "Add space before and after (prevents concatenation)",
+            "Add space before only",
+            "Add space after only",
+            "No padding (paste link as-is)"
+          ],
+          "description": "Smart padding for generated RangeLinks when pasting to destinations"
+        },
+        "rangelink.smartPadding.pasteContent": {
+          "type": "string",
+          "enum": ["both", "before", "after", "none"],
+          "default": "none",
+          "enumDescriptions": [
+            "Add space before and after",
+            "Add space before only",
+            "Add space after only",
+            "No padding (paste text exactly as selected)"
+          ],
+          "description": "Smart padding for selected text when using Paste Selected Text to Destination (R-V)"
         }
       }
     },
