[issues/163] register rangelink.bookmark.add command in package.json
Adds the Add Bookmark command registration for issue #164.

Uses `editorTextFocus` enablement (not `editorHasSelection`) because the
command supports empty selections - it will use the cursor position to
create a single-line bookmark.

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -154,6 +154,13 @@
         "title": "Open RangeLink Status Bar Menu",
         "category": "RangeLink",
         "icon": "$(link)"
+      },
+      {
+        "command": "rangelink.bookmark.add",
+        "title": "Add Bookmark",
+        "category": "RangeLink",
+        "icon": "$(bookmark)",
+        "enablement": "editorTextFocus"
       }
     ],
     "configuration": {
